# diesel-wasm-sqlite

./: .changelog.toml  .envrc  .gitignore  .release-plz.toml  CHANGELOG.md  Cargo.toml  README.md  flake.nix  package.json  rollup.config.js
.direnv/: flake-profile-5d29ed3ce725771b615836418ec95a16c24e795d  flake-profile-5d29ed3ce725771b615836418ec95a16c24e795d.rc
.direnv/flake-inputs/: 14iywja0i8lszk0r4mlx6l727kr12p1r-source  19pla6rl97lygnyxi7h7r160qxv247b6-source  27ngl7fjjjyyp3qj6473nimn8mf6wmh8-source  2mx7dgmxwvdi802a4w0qzayi0ypgsaf7-source  2nnisw4pxbifisbkg58hrnis9ycs5ah1-source  4pr5px39qgxw4fdanjp34w0cjj552db1-source  5n0kgjjm07z3gvz912i5gviig1qh4d4w-source  6m45a85nxn2l4ssszk6m9njfi5jrwp4y-source  7bw9ki9cydb5lqpyll0869j7yfiahkxl-source  dlrwkbfzbag8f4xj2kbixalscj206j45-source  i4ginw25yf2q0shnzvzjjwa58srbjhw7-source  i4nv0mdcx8iifh3r71qd0pbp8al8kp1z-source  ia8xy09wg9si4lbbxgzbyyg1n0qxg1vk-source  jd37lhlipw4ama5cmkdhzw8glwl3jji5-source  lhbcw63xdqclg2hrni4p7dc90nl996lk-source  lmizwzdnxg2933jbwb5d7iadlw1nk1za-source  lqkqmxm7drrgm45dfjjxbw0dk28hrci2-source  mnfbbcdbbwh3iif9m9xp8jnsgys65f2g-source  v1wzqsqi3d9fhdl60n24sqhj7pr3yhin-source  xakwydp2bw92caj3hag4w4i47wliz0mg-source  y3q75sfw2hx2h6xr3d17wryrx6v6k9ak-source  z34yrlyc1jaqnl78awwr89c6c8cy9mdv-source
.github/workflows/: lint-pr.yml  release-plz.yml  test-wasm.yml  test.yml
diesel-wasm-sqlite/: Cargo.toml
diesel-wasm-sqlite/src/: ffi.rs  lib.rs  utils.rs
diesel-wasm-sqlite/tests/common/: mod.rs
diesel-wasm-sqlite/tests/test/: web.rs
examples/web-sqlite/: Cargo.toml  README.md  build.sh  index.html  index.js  run.sh
examples/web-sqlite/css/: attribution.txt  style.css
examples/web-sqlite/pkg/: example_sqlite_web.d.ts  example_sqlite_web.js  example_sqlite_web_bg.wasm  example_sqlite_web_bg.wasm.d.ts  package.json
examples/web-sqlite/pkg/snippets/sqlite-web-90f8afa7b0cd2303/src/js/: sqlite3-diesel.js
examples/web-sqlite/src/: lib.rs  posts.rs  worker.js
src/: ffi.rs
src/js/: sqlite3-opfs-async-proxy.js
tests/common/: mod.rs
tests/test/: row.rs  web.rs
xtask/: Cargo.toml
xtask/src/: build.rs  main.rs  test.rs
