[workspace]
members = [
  "diesel-wasm-sqlite",
  "xtask"
]
resolver = "2"

[workspace.package]
version = "0.0.1"

[workspace.dependencies]
wasm-bindgen = "=0.2.95"
wasm-bindgen-test = "=0.3.45"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
talc = { version = "4.4", default-features = false }
web-sys = { version = "0.3", features = ["console"] }
js-sys = { version = "0.3" }
diesel = { version = "2.2" }
diesel_derives = { version = "2.2", default-features = false }
diesel_migrations = { version = "2.2", default-features = false }
tracing = { version = "0.1", default-features = false }
tracing-wasm = { version = "0.2", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false }
console_error_panic_hook = { version = "0.1"}
tokio = { version = "1.38", default-features = false }
serde = { version = "1.0", default-features = false }
thiserror = { version = "1" }
chrono = { version = "0.4", default-features = false }
rand = "0.8"
getrandom = "0.2"

[patch.crates-io]
diesel = { git = "https://github.com/diesel-rs/diesel", branch = "master" }
diesel_derives = { git = "https://github.com/diesel-rs/diesel", branch = "master" }
diesel_migrations = { git = "https://github.com/diesel-rs/diesel", branch = "master" }

[profile.release]
opt-level = "s"
lto = true

# for color-eyre to build faster in debug
[profile.dev.package.backtrace]
opt-level = 3
