[package]
name = "example-sqlite-web"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
sqlite-web = { path = "./../../" }
wasm-bindgen = "=0.2.99"
wasm-bindgen-futures = "0.4"
diesel = "2.2"
console_error_panic_hook = { version = "0.1.6" }
diesel_migrations = "2.2"
serde = "1"
serde-wasm-bindgen = "0.6"
anyhow = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
tracing-wasm = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
  'console',
  'Document',
  'HtmlElement',
  'HtmlInputElement',
  'HtmlTextAreaElement',
  'MessageEvent',
  'Window',
  'Worker',
  'WorkerType',
  'WorkerOptions'
]

# patch needed until diesel makes a release that includes
# the latest changes
[patch.crates-io]
diesel = { git = "https://github.com/diesel-rs/diesel", branch = "master" }
diesel_derives = { git = "https://github.com/diesel-rs/diesel", branch = "master" }
diesel_migrations = { git = "https://github.com/diesel-rs/diesel", branch = "master" }


[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
# Required for sqlite-web
split-linked-modules = true
